--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <!-- Education section  -->
 
-        <div class="tab-content" id="education">
+        <div class="tab-content active" id="education">
 
           <div class="timeline">
             <div class="timeline-item">
