finished portfolio section
completed section. removed ss folder

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <button type="button" class="tab-item" data-target="#experience">experience</button>
         </div>
 
-        <!-- Education section  -->
+        <!-- Education Section  -->
 
         <div class="tab-content active" id="education">
 
@@ -98,9 +98,9 @@
           </div>
         </div>
 
-        <!-- Education section End -->
+        <!-- Education Section End -->
 
-        <!-- Experience section Start -->
+        <!-- Experience Section  -->
 
         <div class="tab-content" id="experience">
           <div class="timeline">
@@ -125,7 +125,10 @@
           </div>
         </div>
 
-        <!-- Experience section Start -->
+        <!-- Experience Section End -->
+
+        <a href="#" class="btn">download cv</a>
+        <a href="#" class="btn">contact me</a>
 
 
       </div>
