finished portfolio items moving to popup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- Main Section Start-->
-<div class="main">
+<div class="main hidden">
   <!-- Home Section -->
   <section class="home-section align-items-center hidden">
     <div class="container">
@@ -38,7 +38,7 @@
   <!-- Home Section End -->
 
   <!-- About Section  -->
-<section class="about-section sec-padding">
+<section class="about-section sec-padding hidden">
   <div class="container">
     <div class="row">
       <div class="section-title">
@@ -105,19 +105,19 @@
         <div class="tab-content" id="experience">
           <div class="timeline">
             <div class="timeline-item">
-              <span class="date">2017-2019</span>
+              <span class="date">2017 - 2019</span>
               <h4>Tech support specialist - <span>Trizma / NCR</span></h4>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae similique ratione deserunt perspiciatis neque recusandae ab impedit.
               </p>
             </div>
             <div class="timeline-item">
-              <span class="date">2017-2019</span>
+              <span class="date">2017 - 2019</span>
               <h4>Tech support specialist - <span>Trizma / NCR</span></h4>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae similique ratione deserunt perspiciatis neque recusandae ab impedit.
               </p>
             </div>
             <div class="timeline-item">
-              <span class="date">2017-2019</span>
+              <span class="date">2017 - 2019</span>
               <h4>Tech support specialist - <span>Trizma / NCR</span></h4>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae similique ratione deserunt perspiciatis neque recusandae ab impedit.
               </p>
@@ -126,10 +126,8 @@
         </div>
 
         <!-- Experience Section End -->
-
         <a href="#" class="btn">download cv</a>
         <a href="#" class="btn">contact me</a>
-
 
       </div>
     </div>
@@ -137,10 +135,92 @@
   </div>
 </section>
   <!-- About Section End  -->
+  <!-- Portfolio Section -->
+
+    <section class="portfolio-section sec-padding">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <h2>recent work</h2>
+          </div>
+        </div>
+        <div class="row">
+
+          <!-- Portfolio Item -->
+
+            <div class="portfolio-item">
+              <div class="portfolio-item-thumbnail">
+                <img src="img/portfolio/1.jpg" alt="portfolio-item-thumb">
+              </div>
+              <h3 class="portfolio-item-title">Dental Clinic Website</h3>
+              <button type="button" class="btn view-project-btn">view project</button>
+              <div class="portfolio-item-details">
+                <div class="description">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum in commodi dignissimos! Sed sint atque, nam similique maiores culpa eligendi.</p>
+                </div>
+                <div class="general-info">
+                  <ul>
+                    <li>Created - <span>1 Dec 2021</span></li>
+                    <li>Technologies used - <span>JAMSTACK: Stackbit Visual Editor, Gatsby SSG, React, JS, HTML, CSS</span></li>
+                    <li>Role - <span>Frontend</span></li>
+                    <li>View Live - <span><a href="#">www.dentoteam.net</a></span></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+          <!-- Portfolio Item End -->
+
+          <!-- Portfolio Item -->
+
+            <div class="portfolio-item">
+                <div class="portfolio-item-thumbnail">
+                    <img src="img/portfolio/2.jpg" alt="portfolio-item-thumb">
+                </div>
+                    <h3 class="portfolio-item-title">Doors and Windows Construction Company Website</h3>
+                    <button type="button" class="btn view-project-btn">view project</button>
+                <div class="portfolio-item-details">
+                    <div class="description">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum in commodi dignissimos! Sed sint atque, nam similique maiores culpa eligendi.</p>
+                    </div>
+                    <div class="general-info">
+                        <ul>
+                          <li>Work in progress - <span>TBD(2022)</span></li>
+                          <li>Technologies used - <span>HTML, CSS, JS</span></li>
+                          <li>Role - <span>Frontend and Backend</span></li>
+                          <li>View Live - <span><a href="#">www.windoorplast.com</a></span></li>
+                        </ul>
+                    </div>
+                </div>
+              </div>
+        
+          <!-- Portfolio Item End -->
+        </div>
+      </div>
+    </section>
+
+  <!-- Portfolio Section End -->
 
 
 </div>
 <!-- Main Section End -->
+
+<!-- Portfolio Item Details Popup -->
+
+  <div class="portfolio-popup">
+    <div class="pp-inner">
+      <div class="pp-content">
+        <div class="pp-header">
+          <div class="pp-thumbnail">
+            <img src="img/portfolio/3.jpg" alt="pp-thumbnail">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Portfolio Item Details Popup End -->
+
 
 </body>
 </html>
