updated popup styles
pp-inner and pp-content

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
     <div class="pp-inner">
       <div class="pp-content">
         <div class="pp-header">
+          <button type="button" class="btn pp-close">close</button>
           <div class="pp-thumbnail">
             <img src="img/portfolio/3.jpg" alt="pp-thumbnail">
           </div>
@@ -224,3 +225,6 @@
 
 </body>
 </html>
+
+
+<!-- 56:29 -->
