updated portfolio and popup pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- Main Section Start-->
-<div class="main hidden">
+<div class="main">
   <!-- Home Section -->
   <section class="home-section align-items-center hidden">
     <div class="container">
@@ -211,9 +211,23 @@
     <div class="pp-inner">
       <div class="pp-content">
         <div class="pp-header">
-          <button type="button" class="btn pp-close">close</button>
+          <button type="button" class="btn pp-close"><i class="fas fa-times"></i></button>
           <div class="pp-thumbnail">
             <img src="img/portfolio/3.jpg" alt="pp-thumbnail">
+          </div>
+          <h3>app landing page</h3>
+        </div>
+        <div class="pp-body">
+          <div class="description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum in commodi dignissimos! Sed sint atque, nam similique maiores culpa eligendi.</p>
+          </div>
+          <div class="general-info">
+            <ul>
+              <li>Created - <span>1 Dec 2021</span></li>
+              <li>Technologies used - <span>JAMSTACK: Stackbit Visual Editor, Gatsby SSG, React, JS, HTML, CSS</span></li>
+              <li>Role - <span>Frontend</span></li>
+              <li>View Live - <span><a href="#">www.dentoteam.net</a></span></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -227,4 +241,4 @@
 </html>
 
 
-<!-- 56:29 -->
+<!-- 1:00:54 -->
