--- a/index.html
+++ b/index.html
@@ -11,10 +11,25 @@
 
 </head>
 <body>
-<!-- Main Section Start-->
+<!-- Main Section -->
 <div class="main">
+
+<!-- Header Section -->
+
+<header class="header">
+  <div class="container">
+    <div class="row flex-end">
+      <button type="button" class="nav-toggler">
+        <span></span>
+      </button>
+    </div>
+  </div>
+</header>
+
+<!-- Header Section End -->
+
   <!-- Home Section -->
-  <section class="home-section align-items-center hidden">
+  <section class="home-section align-items-center">
     <div class="container">
       <div class="row align-items-center">
         <div class="home-text">
@@ -137,7 +152,7 @@
   <!-- About Section End  -->
   <!-- Portfolio Section -->
 
-    <section class="portfolio-section sec-padding">
+    <section class="portfolio-section sec-padding hidden">
       <div class="container">
         <div class="row">
           <div class="section-title">
@@ -201,6 +216,62 @@
 
   <!-- Portfolio Section End -->
 
+  <!-- Contact Section -->
+
+  <section class="contact-section sec-padding hidden">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2>Contact me</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="contact-form">
+          <form>
+            <div class="row">
+              <div class="input-group">
+                <input type="text" placeholder="Name" class="input-control" required>
+              </div>
+              <div class="input-group">
+                <input type="text" placeholder="Email" class="input-control" required>
+              </div>
+              <div class="input-group">
+                <input type="text" placeholder="Subject" class="input-control" required>
+              </div>
+              <div class="input-group">
+                <textarea placeholder="Message" class="input-control" required></textarea>
+              </div>
+              <div class="submit-btn">
+                <button type="submit" class="btn">Send Message</button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="contact-info">
+          <div class="contact-info-item">
+            <h3>Email</h3>
+            <p>mdcajic@yahoo.com</p>
+          </div>
+          <div class="contact-info-item">
+            <h3>Phone</h3>
+            <p>+38765*******</p>
+          </div>
+          <div class="contact-info-item">
+            <h3>Follow me</h3>
+            <p>mdcajic@yahoo.com</p>
+            <div class="social-links">
+              <a href="#" target="blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
+              <a href="#" target="blank"><i class="fab fa-github"></i></a>
+              <a href="#" target="blank"><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section End -->
 
 </div>
 <!-- Main Section End -->
@@ -215,20 +286,9 @@
           <div class="pp-thumbnail">
             <img src="img/portfolio/3.jpg" alt="pp-thumbnail">
           </div>
-          <h3>app landing page</h3>
+          <h3></h3>
         </div>
         <div class="pp-body">
-          <div class="description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum in commodi dignissimos! Sed sint atque, nam similique maiores culpa eligendi.</p>
-          </div>
-          <div class="general-info">
-            <ul>
-              <li>Created - <span>1 Dec 2021</span></li>
-              <li>Technologies used - <span>JAMSTACK: Stackbit Visual Editor, Gatsby SSG, React, JS, HTML, CSS</span></li>
-              <li>Role - <span>Frontend</span></li>
-              <li>View Live - <span><a href="#">www.dentoteam.net</a></span></li>
-            </ul>
-          </div>
         </div>
       </div>
     </div>
@@ -241,4 +301,4 @@
 </html>
 
 
-<!-- 1:00:54 -->
+<!-- 1:27:54 -->
