--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
       <button type="button" class="nav-toggler">
         <span></span>
       </button>
+      <div class="nav">
+        <div class="nav-inner">
+          <ul>
+            <li><a href="#" class="nav-item">home</a></li>
+            <li><a href="#" class="nav-item">about</a></li>
+            <li><a href="#" class="nav-item">portfolio</a></li>
+            <li><a href="#" class="nav-item">contact</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 </header>
@@ -29,7 +39,7 @@
 <!-- Header Section End -->
 
   <!-- Home Section -->
-  <section class="home-section align-items-center">
+  <section class="home-section align-items-center hidden">
     <div class="container">
       <div class="row align-items-center">
         <div class="home-text">
@@ -301,4 +311,4 @@
 </html>
 
 
-<!-- 1:27:54 -->
+<!-- 1:34:12 -->
