--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
 
 </head>
 <body>
+
+  <!-- Background Circles -->
+
+  <div class="bg-circles">
+    <div class="circle-1"></div>
+    <div class="circle-2"></div>
+    <div class="circle-3"></div>
+    <div class="circle-4"></div>
+  </div>
+
+  <!-- Background Circles End -->
+
+
+<!-- Overlay Section -->
+
+<div class="overlay">
+  
+</div>
+
+<!-- Overlay Section End-->
+
 <!-- Main Section -->
 <div class="main">
 
@@ -25,10 +46,10 @@
       <div class="nav">
         <div class="nav-inner">
           <ul>
-            <li><a href="#" class="nav-item">home</a></li>
-            <li><a href="#" class="nav-item">about</a></li>
-            <li><a href="#" class="nav-item">portfolio</a></li>
-            <li><a href="#" class="nav-item">contact</a></li>
+            <li><a href="#home" class="nav-item link-item">home</a></li>
+            <li><a href="#about" class="nav-item link-item">about</a></li>
+            <li><a href="#portfolio" class="nav-item link-item">portfolio</a></li>
+            <li><a href="#contact" class="nav-item link-item">contact</a></li>
           </ul>
         </div>
       </div>
@@ -39,15 +60,15 @@
 <!-- Header Section End -->
 
   <!-- Home Section -->
-  <section class="home-section align-items-center hidden">
+  <section class="home-section align-items-center active" id="home">
     <div class="container">
       <div class="row align-items-center">
         <div class="home-text">
           <p>Hello World, I'm</p>
           <h1>Dubravko</h1>
           <h2>FrontEnd Web Developer</h2>
-          <a href="#" class="btn">about me</a>
-          <a href="#" class="btn">portfolio</a>
+          <a href="#about" class="btn link-item">about me</a>
+          <a href="#portfolio" class="btn link-item">portfolio</a>
         </div>
         <div class="home-img">
           <div class="img-box">
@@ -63,7 +84,7 @@
   <!-- Home Section End -->
 
   <!-- About Section  -->
-<section class="about-section sec-padding hidden">
+<section class="about-section sec-padding" id="about">
   <div class="container">
     <div class="row">
       <div class="section-title">
@@ -151,8 +172,8 @@
         </div>
 
         <!-- Experience Section End -->
-        <a href="#" class="btn">download cv</a>
-        <a href="#" class="btn">contact me</a>
+        <a href="cv.pdf" class="btn" target="_blank">download cv</a>
+        <a href="#contact" class="btn link-item">contact me</a>
 
       </div>
     </div>
@@ -162,7 +183,7 @@
   <!-- About Section End  -->
   <!-- Portfolio Section -->
 
-    <section class="portfolio-section sec-padding hidden">
+    <section class="portfolio-section sec-padding" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="section-title">
@@ -228,7 +249,7 @@
 
   <!-- Contact Section -->
 
-  <section class="contact-section sec-padding hidden">
+  <section class="contact-section sec-padding" id="contact">
     <div class="container">
       <div class="row">
         <div class="section-title">
@@ -311,4 +332,4 @@
 </html>
 
 
-<!-- 1:34:12 -->
+<!-- 2:03:45 -->
