finished all section now editing and corrections

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
 </head>
 <body>
+  <!-- Page Loader -->
+
+  <div class="page-loader">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+  <!-- Page Loader -->
+
 
   <!-- Background Circles -->
 
@@ -33,7 +43,7 @@
 <!-- Overlay Section End-->
 
 <!-- Main Section -->
-<div class="main">
+<div class="main hidden">
 
 <!-- Header Section -->
 
@@ -60,7 +70,7 @@
 <!-- Header Section End -->
 
   <!-- Home Section -->
-  <section class="home-section align-items-center active" id="home">
+  <section class="home-section align-items-center" id="home">
     <div class="container">
       <div class="row align-items-center">
         <div class="home-text">
