updated links and portfolio section in html

--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
 
           <div class="timeline">
             <div class="timeline-item">
-              <span class="date">2010 - 2020</span>
+              <span class="date">2020</span>
               <h4>Bachelor of Science <span>University of Banja Luka</span></h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam!</p>
+              <p>Acquired BSc degree at Faculty of Natural Sciences, Biology</p>
             </div>
             <div class="timeline-item">
-              <span class="date">2010 - 2020</span>
-              <h4>Bachelor of Science <span>University of Banja Luka</span></h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam!</p>
+              <span class="date">2021</span>
+              <h4>FrontEnd Development Course <span>QStation HUB</span></h4>
+              <p>Finished FrontEnd Development Course in HTML, CSS and JavaScript</p>
             </div>
             <div class="timeline-item">
-              <span class="date">2010 - 2020</span>
-              <h4>Bachelor of Science <span>University of Banja Luka</span></h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam!</p>
+              <span class="date">2021</span>
+              <h4>FrontEnd Development Course <span>The Odin Project</span></h4>
+              <p>Enrolled in The Odin Project Full Stack Development course. Still in progress</p>
             </div>
 
 
@@ -163,7 +163,7 @@
             <div class="timeline-item">
               <span class="date">2017 - 2019</span>
               <h4>Tech support specialist - <span>Trizma / NCR</span></h4>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae similique ratione deserunt perspiciatis neque recusandae ab impedit.
+              <p>Worked as a tech support representative for NCR, hospitality division, Aloha Point of Sale.
               </p>
             </div>
             <div class="timeline-item">
@@ -219,7 +219,7 @@
                     <li>Created - <span>1 Dec 2021</span></li>
                     <li>Technologies used - <span>JAMSTACK: Stackbit Visual Editor, Gatsby SSG, React, JS, HTML, CSS</span></li>
                     <li>Role - <span>Frontend</span></li>
-                    <li>View Live - <span><a href="#">www.dentoteam.net</a></span></li>
+                    <li>View Live - <span><a href="www.dentoteam.net">www.dentoteam.net</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -340,6 +340,3 @@
 
 </body>
 </html>
-
-
-<!-- 2:03:45 -->
