updated, main colors, about me and bg circles

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <div class="circle-2"></div>
     <div class="circle-3"></div>
     <div class="circle-4"></div>
+    <div class="circle-5"></div>
+    <div class="circle-6"></div>
+
   </div>
 
   <!-- Background Circles End -->
@@ -108,7 +111,7 @@
         </div>
       </div>
       <div class="about-text">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae reiciendis pariatur tempore itaque natus labore ea totam sunt! Obcaecati, libero, ut a incidunt eligendi voluptate alias molestias ipsam corporis facere fugit? Doloremque ullam deserunt esse ab, sit laudantium error reprehenderit asperiores corporis placeat accusantium qui praesentium veritatis distinctio ad architecto!</p>
+        <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that :). Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the JAMSTACK Ecosystem. My passion lies within two areas, Coding and Biology.</p>
         <h3>skills</h3>
         <div class="skills">
           <div class="skill-item">HTML</div>
@@ -117,11 +120,12 @@
           <div class="skill-item">Wordpress (basics)</div>
           <div class="skill-item">Gatsby (basics)</div>
           <div class="skill-item">GIT (basics)</div>
-          <div class="skill-item">Markdown</div>
+          <div class="skill-item">Education</div>
           <div class="skill-item">Photography</div>
           <div class="skill-item">Biology</div>
           <div class="skill-item">Linux</div>
           <div class="skill-item">Windows troubleshooting</div>
+          <div class="skill-item">Aloha POS</div>
         </div>
 
         <div class="about-tabs">
@@ -161,21 +165,15 @@
         <div class="tab-content" id="experience">
           <div class="timeline">
             <div class="timeline-item">
-              <span class="date">2017 - 2019</span>
+              <span class="date">2017 - 2018</span>
               <h4>Tech support specialist - <span>Trizma / NCR</span></h4>
               <p>Worked as a tech support representative for NCR, hospitality division, Aloha Point of Sale.
               </p>
             </div>
             <div class="timeline-item">
-              <span class="date">2017 - 2019</span>
+              <span class="date">2018 - 2019</span>
               <h4>Tech support specialist - <span>Trizma / NCR</span></h4>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae similique ratione deserunt perspiciatis neque recusandae ab impedit.
-              </p>
-            </div>
-            <div class="timeline-item">
-              <span class="date">2017 - 2019</span>
-              <h4>Tech support specialist - <span>Trizma / NCR</span></h4>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae similique ratione deserunt perspiciatis neque recusandae ab impedit.
+              <p>Acquired senior position role in tech support
               </p>
             </div>
           </div>
@@ -208,18 +206,18 @@
               <div class="portfolio-item-thumbnail">
                 <img src="img/portfolio/1.jpg" alt="portfolio-item-thumb">
               </div>
-              <h3 class="portfolio-item-title">Dental Clinic Website</h3>
+              <h3 class="portfolio-item-title">Dental Practice Website</h3>
               <button type="button" class="btn view-project-btn">view project</button>
               <div class="portfolio-item-details">
                 <div class="description">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum in commodi dignissimos! Sed sint atque, nam similique maiores culpa eligendi.</p>
+                  <p>This website was done for a local dental practice. It was great learning experience as I had to plan everything from code, hosting, domain and SEO optimization. Core part of the site was set up by using combo of Stackbit visual editor and code editor. It is served over Netlify's CDN, loads up amazingly fast and is responsive.</p>
                 </div>
                 <div class="general-info">
                   <ul>
                     <li>Created - <span>1 Dec 2021</span></li>
                     <li>Technologies used - <span>JAMSTACK: Stackbit Visual Editor, Gatsby SSG, React, JS, HTML, CSS</span></li>
                     <li>Role - <span>Frontend</span></li>
-                    <li>View Live - <span><a href="www.dentoteam.net">www.dentoteam.net</a></span></li>
+                    <li>View Live - <span><a href="https://www.dentoteam.net" target="_blank">www.dentoteam.net</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -237,7 +235,7 @@
                     <button type="button" class="btn view-project-btn">view project</button>
                 <div class="portfolio-item-details">
                     <div class="description">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum in commodi dignissimos! Sed sint atque, nam similique maiores culpa eligendi.</p>
+                        <p>This is still in a planning phase. It should be done by Feb/Mar 2022</p>
                     </div>
                     <div class="general-info">
                         <ul>
@@ -291,20 +289,16 @@
         <div class="contact-info">
           <div class="contact-info-item">
             <h3>Email</h3>
-            <p>mdcajic@yahoo.com</p>
-          </div>
-          <div class="contact-info-item">
-            <h3>Phone</h3>
-            <p>+38765*******</p>
+            <p>mdcajic(at)yahoo(dot)com</p>
           </div>
           <div class="contact-info-item">
             <h3>Follow me</h3>
-            <p>mdcajic@yahoo.com</p>
+            <p>on social networks</p>
             <div class="social-links">
-              <a href="#" target="blank"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
-              <a href="#" target="blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="blank"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.facebook.com/dubravko.cajic/" target="blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com/dubravko.cajic/" target="blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://github.com/psychonautweb" target="blank"><i class="fab fa-github"></i></a>
+              <a href="https://twitter.com/dubravkocajic" target="blank"><i class="fab fa-twitter"></i></a>
             </div>
           </div>
         </div>
