--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
             <div class="portfolio-item">
               <div class="portfolio-item-thumbnail">
-                <img src="img/portfolio/1.jpg" alt="portfolio-item-thumb">
+                <img src="img/portfolio/1.png" alt="portfolio-item-thumb">
               </div>
               <h3 class="portfolio-item-title">Dental Practice Website</h3>
               <button type="button" class="btn view-project-btn">view project</button>
