--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="about-text">
-        <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that :). Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the JAMSTACK Ecosystem. My passion lies within two areas, Coding and Biology.</p>
+        <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that ... or do you? :) Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the JAMSTACK Ecosystem. My passion lies within two areas, Coding and Biology.</p>
         <h3>skills</h3>
         <div class="skills">
           <div class="skill-item">HTML</div>
@@ -144,8 +144,8 @@
           <div class="timeline">
             <div class="timeline-item">
               <span class="date">2020</span>
-              <h4>Bachelor of Science <span>University of Banja Luka</span></h4>
-              <p>Acquired BSc degree at Faculty of Natural Sciences, Biology</p>
+              <h4>Bachelor of Science <span>University of Banja Luka, Faculty of Natural Sciences and Mathematics</span></h4>
+              <p>Acquired BSc degree at Faculty of Natural Sciences and Mathematics, Biology</p>
             </div>
             <div class="timeline-item">
               <span class="date">2021</span>
