--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       </div>
       <div class="row">
         <div class="contact-form">
-          <form>
+          <form target="_blank" action="https://formsubmit.co/mdcajic@yahoo.com" method="POST">
             <div class="row">
               <div class="input-group">
                 <input type="text" placeholder="Name" class="input-control" required>
