--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       </div>
       <div class="row">
         <div class="contact-form">
-          <form target="_blank" action="https://formsubmit.co/mdcajic@yahoo.com" method="POST">
+          <form target="_blank" action="https://formsubmit.co/385950177b58dbc0d4517333e2c4d2fd" method="POST">
             <div class="row">
               <div class="input-group">
                 <input type="text" placeholder="Name" class="input-control" required>
@@ -299,10 +299,10 @@
             <h3>Follow me</h3>
             <p>on social networks</p>
             <div class="social-links">
-              <a href="https://www.facebook.com/dubravko.cajic/" target="blank"><i class="fab fa-facebook-f"></i></a>
-              <a href="https://www.instagram.com/dubravko.cajic/" target="blank"><i class="fab fa-instagram"></i></a>
-              <a href="https://github.com/psychonautweb" target="blank"><i class="fab fa-github"></i></a>
-              <a href="https://twitter.com/dubravkocajic" target="blank"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.facebook.com/dubravko.cajic/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com/dubravko.cajic/" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://github.com/psychonautweb" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://twitter.com/dubravkocajic" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
           </div>
         </div>
