added neon button div and anchor in html, added neon button styles in css

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 
 <header class="header">
   <div class="container">
+    <div class="neon-container">
+      <a href="https://dubravkocajic.onrender.com" class="neon-btn">Home</a>
+    </div>
     <div class="row flex-end">
       <button type="button" class="nav-toggler">
         <span></span>
@@ -323,7 +326,7 @@
         <div class="pp-header">
           <button type="button" class="btn pp-close"><i class="fas fa-times"></i></button>
           <div class="pp-thumbnail">
-            <img src="img/portfolio/3.jpg" alt="pp-thumbnail">
+            <img src="" alt="pp-thumbnail">
           </div>
           <h3></h3>
         </div>
