updated home link to point correctly to landing page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <header class="header">
   <div class="container">
     <div class="neon-container">
-      <a href="https://dubravkocajic.onrender.com" class="neon-btn">Home</a>
+      <a href="#home" class="neon-btn link-item">Home</a>
     </div>
     <div class="row flex-end">
       <button type="button" class="nav-toggler">
