home button update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <header class="header">
   <div class="container">
     <div class="neon-container">
-      <a href="#home" class="neon-btn link-item"></a>
+      <a href="#home" class="neon-btn link-item"><i class="far fa-arrow-alt-circle-left"></i></a>
     </div>
     <div class="row flex-end">
       <button type="button" class="nav-toggler">
@@ -83,12 +83,18 @@
   <section class="home-section align-items-center" id="home">
     <div class="container">
       <div class="row align-items-center">
-        <div class="home-text">
+        <div class="home-text contact-info-item">
           <p>Hello World, I'm</p>
           <h1>Dubravko</h1>
           <h2>FrontEnd Web Developer</h2>
           <a href="#about" class="btn link-item">about me</a>
           <a href="#portfolio" class="btn link-item">portfolio</a>
+          <div class="social-links">
+            <a href="https://www.facebook.com/dubravko.cajic/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/dubravko.cajic/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/psychonautweb" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/dubravkocajic" target="_blank"><i class="fab fa-twitter"></i></a>
+          </div>
         </div>
         <div class="home-img">
           <div class="img-box">
