--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <header class="header">
   <div class="container">
     <div class="neon-container">
-      <a href="#home" class="neon-btn link-item"><i class="far fa-arrow-alt-circle-left"></i></a>
+      <a href="#home" class="neon-btn link-item">(<)</a>
     </div>
     <div class="row flex-end">
       <button type="button" class="nav-toggler">
