added navbar, updated hamburger to show on small screens only

--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
 
 <header class="header">
   <div class="container">
-    <div class="neon-container">
-      <a href="#home" class="neon-btn link-item">(<)</a>
+    <div class="nav-bar">
+      <li><a href="#home" class="btn link-item">home</a></li>
+      <li><a href="#about" class="btn  link-item">about</a></li>
+      <li><a href="#portfolio" class="btn link-item">portfolio</a></li>
+      <li><a href="#contact" class="btn link-item">contact</a></li>
     </div>
     <div class="row flex-end">
       <button type="button" class="nav-toggler">
