--- a/index.html
+++ b/index.html
@@ -282,19 +282,19 @@
       </div>
       <div class="row">
         <div class="contact-form">
-          <form target="_blank" action="https://formsubmit.co/385950177b58dbc0d4517333e2c4d2fd" method="POST">
+          <form action="https://formsubmit.co/385950177b58dbc0d4517333e2c4d2fd" method="POST">
             <div class="row">
               <div class="input-group">
-                <input type="text" placeholder="Name" class="input-control" required>
+                <input type="name" name="name" placeholder="Name" class="input-control" required>
               </div>
               <div class="input-group">
-                <input type="text" placeholder="Email" class="input-control" required>
+                <input type="text" name="email" placeholder="Email" class="input-control" required>
               </div>
               <div class="input-group">
-                <input type="text" placeholder="Subject" class="input-control" required>
+                <input type="text" name="subject" placeholder="Subject" class="input-control" required>
               </div>
               <div class="input-group">
-                <textarea placeholder="Message" class="input-control" required></textarea>
+                <textarea placeholder="Message" name="message" class="input-control" required></textarea>
               </div>
               <div class="submit-btn">
                 <button type="submit" class="btn">Send Message</button>
