--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
           <p>Hello World, I'm</p>
           <h1>Dubravko</h1>
           <h2>FrontEnd Web Developer</h2>
-          <div class="social-links"> <span>{
+          <p>My goal is to build blazingly fast websites and apps that communicate with your customers in a clear and professional way and help your business grow. Improving myself over and over and learning new technologies is part of my philosophy.</p>
+          <div class="social-links">
             <a href="https://www.facebook.com/dubravko.cajic/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/dubravko.cajic/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://github.com/psychonautweb" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://twitter.com/dubravkocajic" target="_blank"><i class="fab fa-twitter"></i></a>
-            }</span>
           </div>
         </div>
         <div class="home-img">
@@ -138,14 +138,11 @@
           <div class="skill-item">CSS Flexbox model</div>
           <div class="skill-item">CSS responsive design and media queries</div>
           <div class="skill-item">JavaScript basics</div>
-          <div class="skill-item">GIT basics:</div>
-          <div class="skill-item">Education</div>
-          <div class="skill-item">Photography</div>
-          <div class="skill-item">Biology</div>
+          <div class="skill-item">GIT (clone, branches, merge, commit)</div>
           <div class="skill-item">Linux</div>
           <div class="skill-item">Windows troubleshooting</div>
-          <div class="skill-item">Aloha POS</div>
-          <p>The list of my skills is still work in progress. So far I've managed to grasp <b>basics</b> of various skills related to Web development: Wordpress, Gatsby SSG, SEO optimization, Hosting a Website, Setting up a domain ...</p>
+          <div class="skill-item">Aloha POS software</div>
+          <p>The list of my skills is still work in progress. So far I've managed to grasp <b>basics</b> of various skills related to Web development: Wordpress, Gatsby SSG, SEO optimization, Hosting a Website, Setting up a domain ... I also possess skills directly unrelated to Web Development which are a product of my University education and hobbies, in Biology, Education and Photography</p>
         </div>
 
         <div class="about-tabs">
@@ -192,7 +189,7 @@
             </div>
             <div class="timeline-item">
               <span class="date">2018 - 2019</span>
-              <h4>Tech support specialist - <span>Trizma / NCR</span></h4>
+              <h4>Tech support specialist - <span>NCR</span></h4>
               <p>Acquired senior position role in tech support
               </p>
             </div>
