--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="portfolio-item-thumbnail">
                     <img src="img/portfolio/2.jpg" alt="portfolio-item-thumb">
                 </div>
-                    <h3 class="portfolio-item-title">Doors and Windows Construction Company Website</h3>
+                    <h3 class="portfolio-item-title">Construction Company Website</h3>
                     <button type="button" class="btn view-project-btn">view project</button>
                 <div class="portfolio-item-details">
                     <div class="description">
