updated timeline item - education section

--- a/index.html
+++ b/index.html
@@ -167,10 +167,14 @@
             </div>
             <div class="timeline-item">
               <span class="date">2021</span>
-              <h4>FrontEnd Development Course <span>The Odin Project</span></h4>
+              <h4>Web Development Course <span>The Odin Project</span></h4>
               <p>Enrolled in The Odin Project Full Stack Development course. Still in progress</p>
             </div>
-
+            <div class="timeline-item">
+              <span class="date">2022</span>
+              <h4>100 days of Code <span>By Maximilian Schwarzmüller</span></h4>
+              <p>Enrolled in UDEMY Web Development course by Maximilian Schwarzmüller. Still in progress</p>
+            </div>
 
           </div>
         </div>
