updated menu, added footer, adjusted font for menu bar

--- a/index.html
+++ b/index.html
@@ -351,7 +351,10 @@
   </div>
 
 <!-- Portfolio Item Details Popup End -->
-
-
+<!-- Footer -->
+<footer>
+  <a href="https://github.com/psychonautweb" target="_blank">Dubravko © 2022</a>
+</footer>
+<!-- Footer End -->
 </body>
 </html>
