--- a/index.html
+++ b/index.html
@@ -304,6 +304,9 @@
               <div class="submit-btn">
                 <button type="submit" class="btn">Send Message</button>
               </div>
+              <div>
+                <input type="hidden" name="_next" value="https://dubravkocajic.ondrender.com">
+              </div>
             </div>
           </form>
         </div>
