--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <button type="submit" class="btn">Send Message</button>
               </div>
               <div>
-                <input type="hidden" name="_next" value="https://dubravkocajic.ondrender.com">
+                <input type="hidden" name="_next" value="https://dubravkocajic.onrender.com">
               </div>
             </div>
           </form>
