updated background styles

--- a/index.html
+++ b/index.html
@@ -38,11 +38,22 @@
     <div class="circle-4"></div>
     <div class="circle-5"></div>
     <div class="circle-6"></div>
-
   </div>
 
   <!-- Background Circles End -->
 
+  <!-- Background Squares -->
+
+  <div class="bg-squares">
+    <div class="square-1"></div>
+    <div class="square-2"></div>
+    <div class="square-3"></div>
+    <div class="square-4"></div>
+    <div class="square-5"></div>
+    <div class="square-6"></div>
+  </div>
+
+  <!-- Background Squares End -->
 
 <!-- Overlay Section -->
 
