hello world animated

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="home-text contact-info-item">
-          <p>Hello World, I'm</p>
+          <p id="hello-text">Hello World, I'm</p>
           <h1>Dubravko</h1>
           <h2>FrontEnd Web Developer</h2>
           <p>My goal is to build blazingly fast websites and apps that communicate with your customers in a clear and professional way and help your business grow. Improving myself over and over and learning new technologies is part of my philosophy.</p>
