--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <input type="name" name="name" placeholder="Name" class="input-control" required>
               </div>
               <div class="input-group">
-                <input type="text" name="email" placeholder="Email" class="input-control" required>
+                <input type="email" name="email" placeholder="Email" class="input-control" required>
               </div>
               <div class="input-group">
                 <input type="text" name="subject" placeholder="Subject" class="input-control" required>
