--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <button type="submit" class="btn">Send Message</button>
               </div>
               <div>
-                <input type="hidden" name="_next" value="https://dubravkocajic.onrender.com">
+                <input type="hidden" name="_next" value="https://dubravko.xyz">
               </div>
             </div>
           </form>
