--- a/index.html
+++ b/index.html
@@ -301,15 +301,19 @@
           <form action="https://formsubmit.co/385950177b58dbc0d4517333e2c4d2fd" method="POST">
             <div class="row">
               <div class="input-group">
+                <h2>Name</h2>
                 <input type="name" name="name" placeholder="Name" class="input-control" required>
               </div>
               <div class="input-group">
+                <h2>E-mail</h2>
                 <input type="email" name="email" placeholder="Email" class="input-control" required>
               </div>
               <div class="input-group">
+                <h2>Subject</h2>
                 <input type="text" name="subject" placeholder="Subject" class="input-control" required>
               </div>
               <div class="input-group">
+                <h2>Message</h2>
                 <textarea placeholder="Message" name="message" class="input-control" required></textarea>
               </div>
               <div class="submit-btn">
