changes to home text and type effect font size in media query ct fot

--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
         <div class="home-text contact-info-item">
           <p>Hello World, I'm</p>
           <h1>Dubravko</h1>
-          <h2 id="hello-text">FrontEnd Web Developer</h2>
+          <h2 id="hello-text">FrontEnd Web Developer</h2> 
           <p>My goal is to build blazingly fast websites and apps that communicate with your customers in a clear and professional way and help your business grow. Improving myself over and over and learning new technologies is part of my philosophy.</p>
+          <p>Check out my latest projects on GitHub or follow me on social networks:</p>
           <div class="social-links">
+
+            <a href="https://github.com/psychonautweb" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.facebook.com/dubravko.cajic/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/dubravko.cajic/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://github.com/psychonautweb" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://twitter.com/dubravkocajic" target="_blank"><i class="fab fa-twitter"></i></a>
           </div>
         </div>
@@ -141,19 +143,18 @@
         </div>
       </div>
       <div class="about-text">
-        <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that ... or do you? :) Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the JAMSTACK Ecosystem. My passion lies within two areas, Coding and Biology.</p>
+        <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that ... or do you? :) Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the JAMSTACK Ecosystem. My passion lies within two areas, coding and biology.</p>
         <h3>skills</h3>
         <div class="skills">
           <div class="skill-item">HTML</div>
-          <div class="skill-item">CSS5</div>
-          <div class="skill-item">CSS Flexbox model</div>
-          <div class="skill-item">CSS responsive design and media queries</div>
+          <div class="skill-item">CSS</div>
+          <div class="skill-item">Responsive design</div>
           <div class="skill-item">JavaScript basics</div>
-          <div class="skill-item">GIT (clone, branches, merge, commit)</div>
+          <div class="skill-item">GIT</div>
           <div class="skill-item">Linux</div>
-          <div class="skill-item">Windows troubleshooting</div>
+          <div class="skill-item">Windows administration</div>
           <div class="skill-item">Aloha POS software</div>
-          <p>The list of my skills is still work in progress. So far I've managed to grasp <b>basics</b> of various skills related to Web development: Wordpress, Gatsby SSG, SEO optimization, Hosting a Website, Setting up a domain ... I also possess skills directly unrelated to Web Development which are a product of my University education and hobbies, in Biology, Education and Photography</p>
+          <p>The list of my skills is still work in progress. So far I've managed to grasp <i>basics</i> of various skills related to Web development: NodeJS, NPM, Wordpress, Gatsby SSG, SEO optimization, Hosting a Website, Setting up a domain ...</p>
         </div>
 
         <div class="about-tabs">
@@ -267,13 +268,13 @@
                     <button type="button" class="btn view-project-btn">view project</button>
                 <div class="portfolio-item-details">
                     <div class="description">
-                        <p>This is still in a planning phase. It should be done by Feb/Mar 2022</p>
+                        <p>This is still in a planning phase. It should be done by Mar 2022</p>
                     </div>
                     <div class="general-info">
                         <ul>
                           <li>Work in progress - <span>TBD(2022)</span></li>
                           <li>Technologies used - <span>HTML, CSS, JS</span></li>
-                          <li>Role - <span>Frontend</span></li>
+                          <li>Role - <span>Frontend, website redesign</span></li>
                           <li>View Live - <span><a href="#">www.windoorplast.com</a></span></li>
                         </ul>
                     </div>
@@ -328,7 +329,7 @@
         <div class="contact-info">
           <div class="contact-info-item">
             <h3>Email</h3>
-            <p>mdcajic(at)yahoo(dot)com</p>
+            <p><a href="mailto:contact@dubravko.xyz">contact@dubravko.xyz</a></p>
           </div>
           <div class="contact-info-item">
             <h3>Follow me</h3>
